fixed the occasional overlay of submenu when click fast by adding z-index -1 to both visible and hidden

--- a/web/themes/custom/customsolent/css/base/elements.css
+++ b/web/themes/custom/customsolent/css/base/elements.css
@@ -1,3 +1,7 @@
 .svg-defs {
     display: none;
 }
+
+body {
+    margin: 0px;
+}
