--- a/web/themes/custom/customsolent/css/component/menu-desktop.css
+++ b/web/themes/custom/customsolent/css/component/menu-desktop.css
@@ -23,9 +23,10 @@
   #slnt-header {
     /*clear: both;*/
     width: 100%;
-    height: 100px;
+    height: 128px;
     opacity: 1.0;
     /* z-index: 10; */
+      /*z-index: 0;*/
     background-color: white;
     position: relative;
   }
@@ -76,10 +77,7 @@ https://stackoverflow.com/a/20590319/227926
   }
   */
 
-  .sub-menu-container.animated {
-  transition: top .5s ease;
-  -webkit-transition: top .5s ease;
-  }
+
 
   /*
   @keyframes top {
@@ -110,6 +108,26 @@ https://stackoverflow.com/a/20590319/227926
     -webkit-transition-duration: .5s;
   }
   
+
+  /*
+  .sub-menu-container.animated {
+  transition: top .5s ease;
+  -webkit-transition: top .5s ease;
+  }
+  */
+
+
+  .sub-menu-container.animated {
+    transition-property: top;
+    -webkit-transition-property: top;
+    transition-timing-function:
+      ease;
+    -webkit-transition-timing-function:
+      ease;
+    transition-duration: .5s;
+    -webkit-transition-duration: .5s;
+  }
+
 
 
       /*height: 64px; */
@@ -146,17 +164,31 @@ https://stackoverflow.com/a/20590319/227926
     /*right: 250px; */
     right: 0px;
     position: absolute;
-    z-index: -2;
+    /*z-index: -2;*/
     /*height: 100%;*/
   }
 
-  .sub-menu-container.visible {
+  .sub-menu-container.visible-2l {
+    /*
     visibility: visible;
     display: initial;
+    */
+          z-index: -1;
   }
 
-  .sub-menu-container.hidden {
+  .sub-menu-container.hidden-2l {
+    /*
     visibility: hidden;
     display: initial;
+    */
+    /*
+    z-index: -1;
+    */
+    /*
+        display: initial;
+        */
+      z-index: -1;
+    /*top: -5px; */
+    /* top hidden position */
   }
 }
